# labox

./: .copier-answers.yml  .gitignore  CHANGELOG.md  README.md  _temp.py  dev.py  example.parquet  mise.toml  pyproject.toml
.github/workflows/: check.yml  docs.yml
docs/: gen_reference.py  mkdocs.yml
docs/src/: custom-styles.css  index.md  usage.md
docs/src/concepts/: database.md  index.md  models.md  overview.md  registries.md  registry.md  serializers.md  storables.md  storages.md  unpackers.md
docs/src/contributing/: index.md
docs/src/integrations/: aws.md  azure.md  builtin.md  dataclasses.md  google.md  imageio.md  index.md  json.md  msgpack.md  numpy.md  os.md  pandas.md  plotly.md  polars.md  pyarrow.md  pydantic.md
docs/src/integrations/built-ins/: serializers.md  storables.md  storages.md
docs/src/usage/: framework.md  guides.md  index.md  overview.md
javascript/: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
javascript/src/: api.test.ts  api.ts  index.ts  render.tsx  test-setup.ts  types.ts
javascript/src/renderers/: csv.tsx  fallback.tsx  image.tsx  index.test.tsx  index.ts  json.tsx  plotly.tsx  types.ts  utils.ts
labox/_internal/: _class_id.py  _simplify.py  _temp_path.py
labox/builtin/serializers/: csv.py  json_test.py
labox/builtin/storables/: dataclasses_test.py
labox/core/: api_test.py  database.py
labox/extra/: google_test.py  pandas_test.py  pyarrow_test.py
labox/test/: core_serializer_utils.py
python/labox/: test.py
python/labox/_internal/: _component.py  _logging.py  _utils.py
python/labox/builtin/: __init__.py
python/labox/builtin/serializers/: __init__.py  datetime.py
python/labox/builtin/storables/: dataclasses.py
python/labox/builtin/storages/: database.py
python/labox/common/: exceptions.py  json.py  streaming.py
python/labox/core/: __init__.py  storage.py
python/labox/extra/: aws.py  aws_test.py  azure_test.py  imageio.py  msgpack.py  msgpack_test.py  numpy_test.py  pandas.py  plotly.py  plotly_test.py  polars.py  polars_test.py  pyarrow.py  pydantic_test.py
python/labox/server/: app.py  routes.py  test.py
python/labox/server/templates/: content_view.html
python/labox/test/: core_storable_utils.py
src/ardex/core/: __init__.py  _registry.py  context.py  loader.py  options.py  saver.py  schema.py  serializer.py  storage.py
src/ardex/core/api/: loader.py  saver.py
src/ardex/extra/: json.py  pyarrow.py  tempfile.py
src/ardex/utils/: anyio.py  stream.py
src/artery/api/: loader.py  saver.py
src/artery/core/: artifact.py  options.py  registry.py  schema.py  serializer.py  storage.py
src/artery/extras/: file_system.py  json.py
src/artery/utils/: anyio.py  misc.py  typing.py
src/artum/core/: loader.py  options.py  saver.py  schema.py  serializer.py  storage.py
src/artum/extra/: json.py  tempfile.py
src/artum/utils/: anyio.py  stream.py
src/datos/api/: loader.py  saver.py
src/datos/core/: loader.py  options.py  registry.py  saver.py  schema.py  serializer.py  storage.py
src/datos/extra/: json.py  tempfile.py
src/datos/extras/: file_system.py  json.py  tempfile.py
src/datos/utils/: anyio.py  stream.py  streams.py
src/labox/_internal/: _anyio.py  _component.py  _json.py  _platformdirs.py
src/labox/builtin/serializers/: __init__.py  csv.py  datetime.py  json.py
src/labox/builtin/storables/: __init__.py  dataclasses.py  simple.py
src/labox/builtin/storages/: __init__.py  database.py  file.py  memory.py
src/labox/common/: anyio.py  json.py  jsonext.py
src/labox/core/: database.py  registry.py  serializer.py  storable.py  storage.py  unpacker.py
src/labox/core/api/: loader.py  saver.py
src/labox/extra/: aws.py  azure.py  google.py  imageio.py  msgpack.py  numpy.py  pandas.py  plotly.py  pyarrow.py  pydantic.py
src/labox/server/: app.py  routes.py
src/labrary/core/: __init__.py  _registry.py  context.py  schema.py  serializer.py  storage.py
src/labrary/core/api/: loader.py  saver.py
src/labrary/extra/: aws.py  json.py  pyarrow.py  tempfile.py
src/labrary/utils/: anyio.py  stream.py  streaming.py
src/lakery/_internal/: _anyio.py  _class_id.py  _component.py  _json.py  _temp_path.py  _utils.py  class_id.py  settings.py  utils.py
src/lakery/builtin/: __init__.py  json_ext.py  model.py  models.py  storables.py
src/lakery/builtin/serializers/: __init__.py  csv.py  datetime.py  json.py
src/lakery/common/: __init__.py  anyio.py  exceptions.py  jsonext.py  misc.py  model.py  models.py  streaming.py  types.py  utils.py
src/lakery/core/: __init__.py  _registry.py  compositor.py  context.py  database.py  decomposer.py  model.py  registries.py  registry.py  schema.py  serializer.py  storable.py  storage.py  unpacker.py
src/lakery/extra/: _utils.py  aws.py  azure.py  dataclasses.py  datetime.py  google.py  imageio.py  json.py  lakery.py  msgpack.py  numpy.py  os.py  pandas.py  plotly.py  polars.py  pyarrow.py  pydantic.py  tempfile.py
src/lakery/stdlib/: dataclasses.py  json.py  os.py
src/lakery/utils/: anyio.py  errors.py  misc.py
tests/: conftest.py  core_api_utils.py  core_context_utils.py  core_registry_utils.py  core_serializer_utils.py  core_storable_utils.py  core_storage_utils.py  serializer_utils.py  storage_utils.py  test_artery.py
tests/test_ardex/: test_core.py
tests/test_ardex/test_extra/: test_json.py  test_pyarrow.py
tests/test_datos/: test_core.py
tests/test_labox/test_core/: test_api.py
tests/test_labox/test_extra/: test_aws.py  test_google.py  test_msgpack.py  test_numpy.py  test_polars.py  test_pydantic.py
tests/test_labrary/: test_core.py
tests/test_labrary/test_extra/: test_json.py  test_pyarrow.py
tests/test_lakery/: test_core.py  test_server.py
tests/test_lakery/test_core/: test_api.py
tests/test_lakery/test_extra/: fake.py  test_aws.py  test_azure.py  test_dataclasses.py  test_google.py  test_json.py  test_msgpack.py  test_numpy.py  test_pandas.py  test_plotly.py  test_polars.py  test_pyarrow.py  test_pydantic.py
tests/test_lakery/test_stdlib/: test_dataclasses.py
(+16 files in other folders)
