[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
include = ["src/lakery", "docs"]
[tool.hatch.build.targets.wheel]
packages = ["src/lakery"]

[project]
name = "lakery"
version = "0.0.1a1"
description = "A data lake creation tool for Python."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
keywords = []
authors = [{ name = "Ryan Morshead", email = "ryan.morshead@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dependencies = [
    "anyio>=4.6.2,<5",
    "anysync>=0.3.1,<1",
    "pybooster>=0.0.7,<1",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "tenacity>=9.0.0,<10",
    "typing-extensions>=4,<5",
]
[project.optional-dependencies]
all = [
    "lakery[aws]",
    "lakery[azure]",
    "lakery[google]",
    "lakery[msgpack]",
    "lakery[numpy]",
    "lakery[pandas]",
    "lakery[plotly]",
    "lakery[polars]",
    "lakery[pyarrow]",
    "lakery[pydantic]",
]
aws = ["boto3>=1,<2"]
azure = ["azure-storage-blob>=12,<13"]
google = ["google-cloud-storage>=2,<3"]
msgpack = ["msgpack>=1,<2"]
numpy = ["numpy>=2,<3"]
pandas = ["pandas>=2,<3", "lakery[pyarrow]"]
plotly = ["plotly>=5,<6"]
polars = ["polars>=1.18.0"]
pyarrow = ["pyarrow>=18,<19"]
pydantic = ["pydantic>=2,<3"]
[project.urls]
Source = "https://github.com/rmorshea/lakery"

[dependency-groups]
dev = [
    { include-group = "util" },
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
    "lakery[all]",
]
util = ["click==8.1.7", "ipykernel==6.29.5", "copier==9.4.1"]
docs = [
    { include-group = "test" },
    "mkdocs-gen-files==0.5.0",
    "mkdocs-material==9.5.39",
    "mkdocs-open-in-new-tab==1.0.5",
    "mkdocs==1.6.1",
    "mkdocstrings-python==1.11.1",
]
lint = [
    { include-group = "test" },
    "doccmd==2024.11.14",
    "mdformat-admon @ git+https://github.com/rmorshea/mdformat-admon.git@0e513d7a2c265faf74441938ccbd1010660609f4",
    "mdformat-mkdocs==3.1.1",
    "mdformat-pyproject==0.0.1",
    "mdformat-tables==1.0.0",
    "mdformat==0.7.19",
    "pyright==1.1.391",
    "ruff==0.9.2",
    "types-boto3-s3==1.35.76",
    "types-boto3==1.35.76",
    "yamlfix==1.17.0",
]
test = [
    { include-group = "util" },
    "coverage[toml]==7.6.1",
    "diff-cover==9.2.0",
    "pycobertura==3.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-examples==0.0.13",
    "pytest==8.3.3",
    "aiosqlite==0.20.0",
    "moto>=5.0.22",
    "aiohttp>=3.11.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py", "*_utils.py"]
filterwarnings = ["error", "ignore:datetime.datetime.utcnow:DeprecationWarning"]

[tool.ruff]
line-length = 100
[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "A005",   # Module shadowing built-in
    "ANN",    # Let pyright handle annotations
    "ANN401", # Allow Any type hints
    "ARG005", # Unused lambda argument
    "B027",   # Allow non-abstract empty methods in abstract base classes
    "B039",   # Mutable default for contextvars
    "B903",   # Class could be dataclass
    "C901",   # Ignore complexity
    "COM812", # Trailing comma
    "CPY001", # Copyright at top of file
    "D100",   # Docstring for module
    "D104",   # Ignore missing docstring for __init__.py
    "D105",   # Docstring for magic method
    "D107",   # Docstring for __init__ method
    "D203",   # One blank line before class
    "D213",   # Multi-line docstring summary second line
    "D407",   # Docstring dashes under section names
    "D413",   # Docstring blank line after last section
    "DOC201", # Return type documentation
    "DOC402", # Yield type documentation
    "DOC501", # Ignore raises missing from docstring
    "ERA001", # Commented out code
    "FBT003", # Allow boolean positional values in function calls, like `dict.get(... True)`
    "ISC001", # implicitly concatenated strings on a single line
    "PIE790", # Unecessary elipsis literal
    "N818",   # Exception name should end with "Error"
    "PL",     # PyLint
    "PYI",    # Stub files
    "RET503", # Explicit return
    "RET505", # Unnecessary return statement after return
    "S105",   # Ignore checks for possible passwords
    "S311",   # Random not suitable for security/cryptographic purposes
    "SIM117", # Use a single `with` statement
]
unfixable = [
    "COM819", # Trailing comma
]
fixable = ["ALL"]
extend-safe-fixes = ["TC"]
[tool.ruff.lint.isort]
known-first-party = ["lakery"]
force-single-line = true
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG001",  # Unused argument (pytest fixtures)
    "PLC2701", # Private imports
    "RUF029",  # Async functions without await
    "S101",    # Assert statements
    "D",       # Docstrings
    "ANN",     # Type annotations
]
"**.ipynb" = [
    "T201", # Print statements
]
"doccmd_*.py" = [
    "ANN",    # Type annotations
    "B018",   # Useless expression
    "D",      # Docstrings
    "FA102",  # Unsafe __futures__ annotations usage
    "INP001", # Implicit namespace package
    "RUF029", # No await in async function
    "S101",   # Assert statements
    "S106",   # Possible passwords
    "SIM115", # Use context manager for opening files
    "T201",   # Print
    "TCH002", # Move third-party import into a type-checking block
]

[tool.yamlfix]
line_length = 100

[tool.coverage.run]
source_pkgs = ["lakery", "tests"]
branch = true
omit = []
[tool.coverage.paths]
lakery = ["src"]
tests = ["tests"]
[tool.coverage.report]
exclude_lines = [
    "# nocov",
    "@overload",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    'if __name__ == .__main__.:',
    '\.\.\.\n($|\s*#.*)',
]
show_missing = true
skip_covered = true
sort = "Name"

[tool.diff_cover]
compare_branch = "origin/main"
fail_under = 100
include_untracked = true
